<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Which JJBA do you like?</string>
    <string name="chooser_title"></string>

    <string name="jojo1_text">Эта история берет своё начало в XIX веке, рассказывая нам о двух сводных братьях - Джонатане Джостаре и Дио Брандо...\n
\n
Конец девятнадцатого века. Как это часто бывало, неосторожно завернув на повороте, повозка с молодой семьей разбилась. Случайно оказавшийся там человек по имени Дарио Брандо, который не отличался хорошими манерами и представлениями о жизни, решил обокрасть похожего на аристократа пострадавшего. Но, к его сожалению, мужчина оказался жив. Поблагодарив Дарио за спасение жизни, сэр Джостар, как истинный джентльмен, пообещал не остаться в долгу.\n
Спустя двенадцать лет, умирая, Дарио через сына, что его ненавидел, передал Джостару письмо, с просьбой приютить молодого отпрыска. После смерти отца, Дио Брандо отправился в поместье, где он мгновенно испортил отношения с единственным сыном владельца дома, Джонатаном. ДжоДжо усердно старался выглядеть как джентльмен, но это ему плохо удавалось, а с появлением Дио его беззаботная жизнь и вовсе превратилась в кошмар.\n
\n
Превратности судьбы нам не известны, но так ли просто столкнулись две противоположности? Какие сюрпризы ожидают молодых людей, и какова роль загадочной маски в этой авантюре?</string>
    <string name="jojo2_text">Эта история повествует о Джозефе, внуке Джонатана. И о происхождении каменной маски, с которой всё началось...</string>
    <string name="jojo3_text">Куджо Джотаро обнаруживает в себе мистические способности, и, не зная, как с этим бороться, сам запирает себя в местной тюрьме. Через некоторое время его мать, не в силах бороться с сыном, просит приехать своего отца, дедушку Джотаро, который и объясняет внуку, что за таинственная сила скрывается в нём и для чего она дана ему!</string>
    <string name="jojo4_text">Провинциальный японский городок Морио, скучен и тих, но ровно до того момента, пока в нём не начнут появляться обладатели необычайных способностей – стандов. Невероятные происшествия проходят мимо ничего не подозревающих обывателей, кто-то получил возможность пробуждать в людях экстраординарные силы, иные использует их на благо, другие -  во зло. Исчезают бесследно девушки с изящными руками, но никто не поднимает шума, в захолустье всегда найдётся место для местных чудаков, городских легенд и баек о неупокоенных духах… Но загадочному маньяку недолго осталось творить свои злодеяния, ведь на страже покоя города стоит компания Джоске Хигашикаты, внебрачного сына Джозефа Джостара, Несокрушимого, как Алмаз...</string>
    <string name="jojo5_text">Место действия переносится в Италию. А главным героем её становится Джорно Джованна – юный, но весьма амбициозный парень, являющийся немного-немало сыном знаменитого по предыдущим аркам Дио Брандо. Однако, в отличие от своего отца, Джорно избрал совсем иной путь и определенно другие средства к достижению свой мечты. Он решается занять место крёстного отца, главы итальянской мафии, и установить железный контроль над беззаконием и криминалом. Но основная загвоздка в том, что в мафии почему-то опять все главные люди со способностями, а у некоторых даже волшебные стрелы имеются. На своём пути к вершинам власти он столкнётся с множеством возможных союзников, еще большим количеством противников, узнает множество тайн и решит немало загадок…</string>

    <string name="jojo1_title">Невероятные Приключения ДжоДжо: Кровь Прошлого</string>
    <string name="jojo2_title">Невероятное приключение ДжоДжо: Склонность к сражениям</string>
    <string name="jojo3_title">Невероятные Приключения ДжоДжо: Крестоносцы Звездной Пыли</string>
    <string name="jojo4_title">Невероятные Приключения ДжоДжо: Несокрушимый алмаз</string>
    <string name="jojo5_title">Невероятные Приключения ДжоДжо: Золотой ветер</string>

    <string name="details">Подробнее</string>
    <string name="about">О приложении</string>
    <string name="main_screen">Главный экран</string>
    <string name="like">Нравится</string>
    <string name="back">Назад</string>
    <string name="invitation">Пригласить друга</string>
    <string name="close">Закрыть</string>
    <string name="navigation_drawer_open">Открыть navigation drawer</string>
    <string name="navigation_drawer_close">Закрыть navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>