<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/jojo1"></ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jojo1_title"
                android:layout_marginBottom="50dp"></TextView>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/details"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/btnDetails"></Button>
                <CheckBox
                    android:id="@+id/like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"></CheckBox>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:text="@string/jojo1_title"
            android:layout_marginBottom="50dp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/jojo2"></ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:id="@+id/title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jojo2_title"
                    android:layout_marginBottom="50dp"></TextView>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:layout_marginBottom="20dp"
                    android:singleLine="true"
                    android:id="@+id/btnDetails2"></Button>
                <CheckBox
                    android:id="@+id/like2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"></CheckBox>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/comment2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:text="@string/jojo1_title"
            android:layout_marginBottom="50dp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/jojo3"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:text="@string/jojo3_title"></TextView>

                <Button
                    android:id="@+id/btnDetails3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:singleLine="true"
                    android:text="@string/details"></Button>

                <CheckBox
                    android:id="@+id/like3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"></CheckBox>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/comment3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:text="@string/jojo1_title"
            android:layout_marginBottom="50dp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/jojo4"></ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:id="@+id/title4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jojo4_title"
                    android:layout_marginBottom="50dp"></TextView>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:singleLine="true"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/btnDetails4"></Button>
                <CheckBox
                    android:id="@+id/like4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"></CheckBox>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/comment4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:text="@string/jojo1_title"
            android:layout_marginBottom="50dp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/jojo5"></ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:id="@+id/title5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jojo5_title"
                    android:layout_marginBottom="50dp"></TextView>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:singleLine="true"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/btnDetails5"></Button>
                <CheckBox
                    android:id="@+id/like5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"></CheckBox>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/comment5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:text="@string/jojo1_title"
            android:layout_marginBottom="50dp"></TextView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/invitation"
            android:layout_marginBottom="20dp"
            android:id="@+id/btnInvite"></Button>
    </LinearLayout>
</ScrollView>