<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/intervening_place">

<!--        <include layout="@layout/waiting_layout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            android:id="@+id/imageview_animation_list"-->
<!--            android:src="@drawable/frame_anim" />-->

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageview_animation_list"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/fr1" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/imageview_animation_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/jojo1"
                android:layout_marginBottom="@dimen/intervening_place"
                ></ImageView>>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/intervening_place"
                    tools:text="@string/jojo1_title"></TextView>

        <ScrollView
            android:id="@+id/scroll1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="@dimen/intervening_place">

            <TextView
                android:id="@+id/describingText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10dp"
                tools:text="@string/jojo1_text"></TextView>
        </ScrollView>

        <ScrollView
            android:id="@+id/scroll2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_view"
            app:layout_constraintTop_toBottomOf="@+id/scroll1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/intervening_place"
            >

            <EditText
                android:id="@+id/commentText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                tools:text="@string/jojo1_text"></EditText>
        </ScrollView>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
            android:layout_marginTop="@dimen/intervening_place">
        <CheckBox
            android:id="@+id/likeFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:layout_marginRight="60dp"></CheckBox>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/back"></Button>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/drawer_layout"
        android:fitsSystemWindows="true" />

</androidx.drawerlayout.widget.DrawerLayout>